# fitstoolz

./: .gitignore  README.md  README.rst  pyproject.toml
docs/: README.rst  conf.py  index.rst  installation.rst  reference.rst
fitstools/: reader.py
fitstoolz/: __init__.py  reader.py  utils.py
fitstoolz/scripts/: __init__.py  stack.py  stack.yaml
fitstoolz/scripts/cabs/: fitstoolz-stack.yaml
tests/: test_expand_axes.py
